--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -7,8 +7,7 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40">
-    <div fxFlex *ngIf="dish">
+    <div fxFlex="40" *ngIf="dish">
         <mat-card>
             <mat-card-header>
             <mat-card-title>
@@ -22,18 +21,25 @@
     
             </mat-card-content>
             <mat-card-actions>
+              <button mat-button [routerLink]="['/dishdetail', prev]">
+                <span class="fa fa-chevron-left fa-lg"></span>
+              </button>
               <button mat-button (click)="goBack()">BACK</button>
                 <button mat-button>LIKE</button>
                 <button mat-button>SHARE</button>
+                <span class="flex-spacer"></span>
+              <button mat-button [routerLink]="['/dishdetail', next]">
+                <span class="fa fa-chevron-right fa-lg"></span>
+              </button>
             </mat-card-actions>
         </mat-card>
     </div>
-  </div>
 
-  <div fxFlex="40">
-    <mat-list *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish">
+    <mat-list>
     <h3>Comments</h3>
 		<mat-card>
+
 			<mat-card-item *ngFor="let comment of dish.comments">
 				<p mat-line>
 					<span>{{comment.comment}}</span>
@@ -44,9 +50,43 @@
 				<p mat-line>
 					<span>-- {{comment.author}} {{ comment.date | date }}</span>
 				</p>
-			</mat-card-item>
-    </mat-card>
+      </mat-card-item>
+  </mat-card>
+  <mat-list-item *ngIf="this.commentForm.valid">
+    <p mat-line>
+      <span>{{commentForm.value.comment}}</span>
+    </p>
+    <p mat-line>
+      <span>{{commentForm.value.rating}} Stars</span>
+    </p>
+    <p mat-line>
+      <span>--{{commentForm.value.author}}</span>
+    </p>
+  </mat-list-item>
   </mat-list>
+  <form novalidate [formGroup]="commentForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+    <p>
+      <mat-form-field>
+        <input matInput formControlName="author" placeholder="Author" type="text" required>
+        <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-slider label="Rating" thumbLabel formControlName="rating" [display]="formLabel" tickInterval="5" min="0" max="5"></mat-slider>
+    </p>
+    <p>
+      <mat-form-field>
+        <input matInput formControlName="comment" placeholder="Comment" type="text" required>
+        <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid" >Submit</button>
+    </p>
+  </form>
   </div>
+  <div fxFlex [hidden]="dish">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
 
 </div>
